[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


[tool.poetry]
name = "pytoml_sample"
version = "0.0.1"
authors = ["Bamba <bamba@bamba.com"]
description = "pytoml_sample"

homepage = "https://github.com/fixme"
repository = "https://github.com/fixme"
documentation = "https://github.com/fixme"

keywords = ["fixme"]

[tool.poetry.dependencies]
python = "*"
toolz = "^0.9.0"
cytoolz = "^0.9.0"
requests = "^2.20"
xmltodict = "^0.11.0"
python-dateutil = "^2.7"
odata = {git = "https://github.com/tuomur/python-odata"}
glom = "^18.3"
pendulum = "^2.0"
attrs-serde = "^0.1.1"
structlog = "^18.2"
formation = "^0.1.27"
PyJWT = "^1.7"
attr = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-benchmark = "^3.1"
pytest-testmon = "^0.9.13"
pytest-watch = "^4.2"
snapshottest = "^0.5.0"

flake8 = { version = "^3.5", optional = true }
flake8-mypy = { version = "^17.8", optional = true }
vcrpy = "^2.0"
scrub = "^0.1.2"
changelog-cli = "^0.6.2"
poetry-setup = "^0.3.6"
pytest-vcr = "^1.0"
mock = "^2.0"
tox = "=3.5.3"

[tool.poetry.extras]
lint = ["flake8", "flake8-mypy"]